# TCC_Aprendizado_por_reforco_robo_humanoide_simulacao_MuJoCo

./: .gitignore  README.md  commands.txt
complete_mujoco_model/: MUJOCO_LOG.TXT  config.json  robot.xml  (+1 more)
reinforcement_learning/op3_model/: .pre-commit-config.yaml  pyproject.toml
reinforcement_learning/op3_model/src/atom/: __init__.py  env.py
reinforcement_learning/op3_model/src/model/: op3.xml  robot.xml  scene.xml
reinforcement_learning/op3_model/src/model/assets/: atom_1_peito_frontal_impressao.stl  atom_amortecedor_tras_lados_invertidos.part  atom_braco.part  atom_braco__2.stl  atom_camera__2.part  atom_camera__3.part  atom_camera__3.stl  atom_chapa_motores_ombro.stl  atom_chapa_ombro_cima_fibra.stl  atom_chapa_peito_baixo.part  atom_chapa_peito_traseira_fibra.part  atom_conector_motores_dir_simulacao__2.stl  atom_conector_rolamento.part  atom_coxa.part  atom_junta.part  atom_junta__2.part  atom_junta_inferior_coxa.part  atom_junta_inferior_pe.part  atom_junta_inferior_pe.stl  atom_mao.part  atom_mao_espacador.stl  atom_ombro.part  atom_ombro.stl  atom_ombro_chapa.part  atom_panturrilha.part  atom_panturrilha.stl  atom_peito_lateral.stl  atom_peito_traseira_impressao.part  atom_pescoco.part  atom_pescoco.stl  atom_porta_bateria.part  atom_porta_bateria.stl  part_1.part  part_1.stl  part_1__2.part  part_1__2.stl  part_1__3.part  part_1__3.stl  xm430.part  xm430.stl  (+5 more)
reinforcement_learning/op3_model/src/op3/: __init__.py
reinforcement_learning/op3_model/tests/: test_environment.py  test_model.py
reinforcement_learning/op3_model/utils/: increment_version.py
(+563 files in other folders)
